# EvaluadorCVs

./: README.md  app.py  pyproject.toml  run_app.bat
src/: cv_evaluator.py  greeting_chain.py  interview_chain.py  models.py  question_chain.py
styles/: styles.css
utils/: utils.py
