[tool.poetry]
name = "evaluadorcvs"
version = "0.2.0"
description = ""
authors = ["anmartinez18"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.3"
langchain = "^1.2.3"
gradio = "^6.3.0"
langchain-community = "^0.4.1"
langchain-mistralai = "^1.1.1"
pymupdf = "^1.26.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"